# baremetal-gpt

./: .gitignore  PLAN.md  PLAN_DQ_DK.md  README.md  config.py  main.py  model.py  optimizers.py  pyproject.toml  run.sh  sample.py  train.py
bmgpt/: model.py  optimizers.py  sample.py  train.py
bmgpt/data/: number_staircase.py  utils.py
configs/: config.yaml
configs/dataset/: dclm.yaml  mnist.yaml  shakespeare.yaml  staircase.yaml  text_toy.yaml
configs/deploy/: v4-16.yaml  v4-32.yaml  v4-4.yaml
configs/experiment/: dclm.yaml  mnist.yaml  text-toy.yaml  text_toy.yaml  tiny-shakespeare.yaml
configs/hooks/: full.yaml  full_with_no_kernels.yaml
configs/model/: 1-1b.yaml  1-4b.yaml  1-5b.yaml  1B.yaml  1b.yaml  1p5B.yaml  1p8B.yaml  2-1b.yaml  280M.yaml  290M.yaml  3B.yaml  3b.yaml  570M.yaml  630M.yaml  740M.yaml  7B-llama2.yaml  7B.yaml
configs/sharding/: data-parallel.yaml  dp.yaml  fsdp.yaml  hsdp.yaml
data/: download_and_preprocess_mnist.py  number_staircase.py  utils.py
data/dclm/: download_and_preprocess_dclm.sh  download_dclm_sharded.sh  setup_aws_cli.sh
data/mnist/: download_and_preprocess_mnist.py  download_mnist.sh
data/tiny-shakespeare/: download_and_tokenize_tiny_shakespeare.py
deploy/: cookbook.sh  download_dclm_sharded.sh  download_mnist.sh  download_shakespeare.sh  profile.sh  run.sh  run_mwe.sh  startup.sh
scripts/: setup_wandb_workspace.py
src/: sample.py
src/bmgpt/: ce_kernel.py  ce_mask.py  ce_mask_info.py  config.py  data.py  evaluators.py  loggers.py  losses.py  model.py  optimizers.py  sample.py  splash_helpers.py  tokenizers.py  train.py
src/bmgpt/kernels/: lse_kernel.py  lse_mask.py
src/data/: utils.py
tests/: conftest.py  diagnostic.py  profile_train_step.py  splash_mwe.py  test_basic.py  test_ce_kernel.py  test_debug_gradients.py  test_dp_rand.sh  test_lse_kernel.py  test_model.py  test_optimizers.py  test_splash_precision.py  the-training-cookbook.py
tests/kernels/: bench_fused_ce.py  bench_fused_ce_suite.sh  conftest.py  test_losses.py  test_lse_fused.py  test_lse_kernel.py  test_timing.py
