[project]
name = "nanocrate"
version = "0.1.0"
description = "Hackable transformer repo, in JAX"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
]

[project.optional-dependencies]
cpu = [
    "jax>=0.7.1",
]
tpu = [
    "jax[tpu]>=0.7.1",
]

[tool.uv]
conflicts = [
    [
      { extra = "cpu" },
      { extra = "tpu" },
    ],
]

[tool.ruff]
# Basic configuration
line-length = 88

[tool.ruff.lint]
# Enable fix mode (equivalent to --fix flag)
fixable = ["ALL"]
unfixable = []

# Rule selection
select = ["E", "W", "F"]  # Error, Warning, and Pyflakes rules

# Rules to ignore
ignore = [
    "F401",  # Unused import
    "F821",  # Undefined name
    "E402",  # Module level import not at top of file
    "F841",  # Local variable assigned but not used
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
    "ipython>=8.37.0",
    "pytest>=8.4.1",
    "rich>=14.1.0",
]

