[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project]
name = "baremetal-gpt"
version = "0.1.0"
description = "Simple, hackable transformer training & inference, in bare-metal JAX"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-joblib-launcher>=1.2.0",
    "tiktoken>=0.12.0",
    "wandb>=0.23.1",
    "webdataset>=1.0.2",
]

[project.optional-dependencies]
cpu = [
    "jax==0.8.0",
]
tpu = [
    "jax[tpu]==0.8.0",
]

[project.scripts]
train = "bmgpt.train:main"

[tool.uv]
config-settings = { editable_mode = 'compat' }
conflicts = [
    [
      { extra = "cpu" },
      { extra = "tpu" },
    ],
]

[tool.uv.build-backend]
module-name = "bmgpt"

[tool.uv.sources]
bmgpt = { path = ".", editable = true }

[tool.ty.src]
exclude = ["tests"]

[tool.ruff]
line-length = 88
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

select = ["E", "W", "F"]  # Error, Warning, and Pyflakes rules

ignore = [
    "F401",  # Unused import
    "F821",  # Undefined name
    "E402",  # Module level import not at top of file
    "F841",  # Local variable assigned but not used
    "E731",  # use a def, not a lambda
]

[dependency-groups]
dev = [
    "datasets>=4.4.2",
    "debugpy>=1.8.19",
    "ipython>=9.8.0",
    "optax>=0.2.6",
    "pillow>=12.0.0",
    "pytest>=9.0.2",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
    "tyro>=1.0.3",
    "xprof>=2.21.3",
]
